syntax = "proto3";

package notification;

import "common.proto";
import "google/protobuf/empty.proto";

message MailCommand {

  message Template {
    string subject = 1;
    string file = 2;
  }

  Template template = 1;
  string lang = 2;
}

message SendMailRequest {
  repeated string user_ids = 1;
  repeated string emails = 2;
  string data = 5;
  MailCommand mail_command = 9; 
}

message ListLangs {
  repeated string data = 1;
}

message GroupNotificationFilter {
  int32 page = 1;
  int32 limit = 2;
  int32 notification_category_id = 3;
  bool is_active = 4;
  string search_field = 5;
  string search_text = 6;
  string sort = 8;
  string sort_type = 9;
};

message MailSchedule {
  string id = 1;
  int32 status = 2;
  common.MultiLanguageField title = 3;
  common.MultiLanguageField content = 4;
  string created_at = 5;
  string publish_at = 6;
  string sent_at = 7;
  repeated string user_groups = 8;
}

message PushSchedule {
  string id = 1;
  int32 status = 2;
  common.MultiLanguageField title = 3;
  common.MultiLanguageField content = 5;
  string created_at = 6;
  string publish_at = 7;
  string sent_at = 8;
  repeated string user_groups = 9;
}

message GroupNotification {
  string id = 1;
  int32 notification_category_id = 2;
  common.MultiLanguageField title = 3;
  common.MultiLanguageField content = 4;
  bool is_active = 5;
  string created_at = 6;
  string image = 7;
  string publish_at = 8;
  bool need_send_mail = 9;
  bool is_mail_sent = 10;
  string mail_sent_at = 11;
  bool need_send_push = 12;
  bool is_push_sent = 13;
  string push_sent_at = 14;
  MailSchedule mail_schedule = 15;
  PushSchedule push_schedule = 16;
  bool is_published = 17;
  string slug = 18;
}

message GroupNotificationResponse {
  GroupNotification data = 1;
}

message ListGroupNotification {
  repeated GroupNotification data = 1;
  common.PaginationMeta pagination = 2;
}

service NotificationService {
  rpc GetListGroupNotification(GroupNotificationFilter) returns (ListGroupNotification);
  rpc FindGroupNotificationById(common.DataById) returns (GroupNotificationResponse);
  rpc CreateGroupNotification(GroupNotification) returns (common.PostResponse);
  rpc UpdateGroupNotification(GroupNotification) returns (common.PostResponse);

  rpc SendMail(SendMailRequest) returns (common.PostResponse);
  rpc GetSupportedLangs(google.protobuf.Empty) returns (ListLangs);
}
